$Id$

2014-07-20  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in:
	Fix usage of line breaks and empty lines.

2014-07-19  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in, update-smart-drivedb.8.in:
	Add FILES section.  Move FULL PATH info to FILES section.
	Rename REFERENCES section.  Move HOME PAGE info to REFERENCES section.
	Remove AUTHORS section from smartd.conf man page.
	Update or remove various outdated info.

2014-07-18  Christian Franke  <franke@computer.org>

	configure.ac: Use 'email' instead of 'mail' on Cygwin.
	Remove outdated '-mno-cygwin' error check.
	Makefile.am, smartd.conf.5.in: Replace 'mail' by actual platform
	specific mailer.
	examplescripts/README, examplescripts/Example[123]: Remove bashisms.
	Use '/usr/bin/mail' instead of '/bin/mail'.
	os_win32/daemon_win32.cpp: Support older MinGW headers with missing
	struct SERVICE_DELAYED_AUTO_START_INFO.

2014-07-17  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/M500/M510/M550 Client SSDs: Rename, add MX100,
	  update MX510/550
	- Indilinx Barefoot based SSDs: OCZ Vertex 1.10
	- Intel 320 Series SSDs: 'L' variant
	- JMicron based SSDs: Transcend *18M-M variant
	- Plextor M3/M5 (Pro) Series SSDs: M5M (mSATA) variant
	- Samsung based SSDs: 840 EVO

2014-07-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Marvell based SanDisk SSDs: Extreme II (ticket #334), others
	- SanDisk based SSDs: iSSD P4 (ticket #272), U100 (ticket #337), others
	- USB: Iomega (0x059b:0x047a)
	- USB: WD My Passport: Merge entries
	- USB: WD My Passport USB 3.0 (0x1058:0x074a, 0x1058:0x0820)
	- USB: ADATA (0x125f:0xa[13]1a)
	- USB: JMicron JMS539 (0x152d:0x0539): New FW supports SAT (ticket #338)
	- USB: TrekStor Datastation (0x1e68:0x0050) (Red Hat Bugzilla 954162)

2014-07-13  Christian Franke  <franke@computer.org>

	atacmds.cpp: Add missing const and initialization.